--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -16,6 +16,9 @@ jobs:
     outputs:
       semver: ${{ steps.get-semver.outputs.semver }}
     steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
