--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -33,9 +33,13 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_BASIC }}
+      - uses: actions/checkout@v3
+        with:
+          repository: cncsc/actions
+          path: /temp/actions/
       - id: get-semver
         name: Read generated semver
-        run: ${{ github.action_path }}/scripts/versioning/get-semver.sh
+        run: /temp/actions/scripts/versioning/get-semver.sh
         shell: bash
         env:
           CURRENT_COMMIT_HASH: ${{ github.sha }}
