--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -36,10 +36,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: cncsc/actions
-          path: /temp/actions/
+          path: ./.actions/
       - id: get-semver
         name: Read generated semver
-        run: /temp/actions/scripts/versioning/get-semver.sh
+        run: ./.actions/scripts/versioning/get-semver.sh
         shell: bash
         env:
           CURRENT_COMMIT_HASH: ${{ github.sha }}
