--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -10,6 +10,10 @@ on:
         required: false
         type: boolean
         default: true
+      validateTerraform:
+        required: false
+        type: boolean
+        default: false
 jobs:
 
   # -------------------------------------------------------------------------------------------------------------------
@@ -26,6 +30,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - uses: Homebrew/actions/setup-homebrew@master
+      - name: Install tflint
+        if: inputs.validateTerraform == true
+        run: brew install tflint tfsec
+        shell: bash
       - name: Install pre-commit
         run: python -m pip install pre-commit
         shell: bash
