Genericize dependency installation; add README (breaking)

--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -3,17 +3,20 @@ on:
   workflow_call:
     inputs:
       runPreCommit:
+        description: Whether or not to run pre-commit during validation.
         required: false
         type: boolean
         default: true
       runDefaultLinters:
+        description: Whether or not to run the lint script from the project's package.json file.
         required: false
         type: boolean
         default: true
-      validateTerraform:
+      additionalHomebrewPackages:
+        description: A space-delimited list of Homebrew packages to install.
         required: false
-        type: boolean
-        default: false
+        type: string
+        default: ''
 jobs:
 
   # -------------------------------------------------------------------------------------------------------------------
@@ -27,25 +30,33 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+
       - uses: Homebrew/actions/setup-homebrew@master
-        if: inputs.validateTerraform == true
-      - name: Install Terraform dependencies
-        if: inputs.validateTerraform == true
-        run: brew install tflint tfsec
+        if: inputs.additionalHomebrewPackages != ''
+
+      - name: Install Homebrew packages
+        if: inputs.additionalHomebrewPackages != ''
+        run: brew install ${{ inputs.additionalHomebrewPackages }}
         shell: bash
+
       - name: Install pre-commit
+        # This remains a python/pip step to keep Homebrew install optional.
         run: python -m pip install pre-commit
         shell: bash
+
       - name: Freeze python dependencies
         run: python -m pip freeze --local
         shell: bash
+
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ hashFiles('.pre-commit-config.yaml') }}|${{ env.pythonLocation }}
+
       - name: Run pre-commit validation
         run: pre-commit run --show-diff-on-failure --color=always ${{ inputs.args }}
         shell: bash
@@ -61,12 +72,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
+
       - name: Install node dependencies
         run: npm ci
         shell: bash
+
       - name: Run lint script
         run: npm run lint
         shell: bash
