Add shellcheck validation (patch)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,3 +5,4 @@ jobs:
   ci:
     name: Validation
     uses: cncsc/actions/.github/workflows/validation.yaml@main
+    additionalHomebrewPackages: shellcheck
