--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,4 +5,5 @@ jobs:
   ci:
     name: Validation
     uses: cncsc/actions/.github/workflows/validation.yaml@main
-    additionalHomebrewPackages: shellcheck
+    with:
+      additionalHomebrewPackages: shellcheck
