--- a/.github/workflows/terragrunt-apply.yaml
+++ b/.github/workflows/terragrunt-apply.yaml
@@ -25,6 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          submodules: recursive
+
+      - uses: actions/checkout@v3
+        with:
           repository: cncsc/actions
           path: ./.actions/
 
