--- a/.github/workflows/terragrunt-apply.yaml
+++ b/.github/workflows/terragrunt-apply.yaml
@@ -16,6 +16,8 @@ on:
         required: true
       TFC_ACCESS_TOKEN:
         required: true
+      CI_BOT_SSH_KEY:
+        required: true
 jobs:
   terragrunt-apply:
     runs-on: ubuntu-latest
@@ -63,6 +65,13 @@ jobs:
         run: export GITHUB_TOKEN="$GIT_TOKEN_BASIC"
         env:
           GIT_TOKEN_BASIC: ${{ secrets.GIT_TOKEN_BASIC }}
+
+      - name: Import SSH key
+        if: steps.verify_files_changed.outputs.files_changed == 'true'
+        run: ./.actions/scripts/utilities/import-ssh-key.sh
+        shell: bash
+        env:
+          CI_BOT_SSH_KEY: ${{ secrets.CI_BOT_SSH_KEY }}
 
       # TODO: Add auth setup steps for each of the supported backends.
       # Need to consider how we want to leverage environments for `dev` and `prod`, etc.
