Prevent sops from prompting for GPG key passphrase (fix)

--- a/.github/workflows/terragrunt-apply.yaml
+++ b/.github/workflows/terragrunt-apply.yaml
@@ -91,3 +91,5 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN_BASIC }}
+          CI_BOT_GPG_KEY_PASSPHRASE: ${{ secrets.CI_BOT_GPG_KEY_PASSPHRASE }}
+          CI_BOT_GPG_KEY_SUBJECT: ${{ secrets.CI_BOT_GPG_KEY_SUBJECT }}
