--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -17,6 +17,10 @@ on:
         required: false
         type: string
         default: ''
+    secrets:
+      GIT_TOKEN_BASIC:
+        required: false
+        default: null
 jobs:
 
   # -------------------------------------------------------------------------------------------------------------------
@@ -30,6 +34,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          token: ${{ secrets.GIT_TOKEN_BASIC }}
 
       - uses: actions/setup-python@v4
         with:
