--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-          token: ${{ secrets.GIT_TOKEN_BASIC }}
+          token: ${{ secrets.GIT_TOKEN_BASIC || github.token }}
 
       - uses: actions/setup-python@v4
         with:
