--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          token: ${{ secrets.GIT_TOKEN_BASIC || github.token }}
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
