--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -76,6 +76,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          token: ${{ secrets.GIT_TOKEN_BASIC || github.token }}
 
       - uses: actions/setup-node@v3
         with:
