--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -22,7 +22,7 @@ jobs:
           token: ${{ secrets.GIT_TOKEN_BASIC || github.token }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: lts/*
       - name: Install node dependencies
         run: npm ci
         shell: bash
