--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -80,7 +80,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: lts/*
 
       - name: Install node dependencies
         run: npm ci
