Make checkout step optional (patch)

--- a/.github/workflows/deploy-to-sharepoint.yaml
+++ b/.github/workflows/deploy-to-sharepoint.yaml
@@ -20,6 +20,10 @@ on:
         required: true
         type: string
         default: './dist/'
+      freshCheckout:
+        required: true
+        type: boolean
+        default: true
       runDefaultBuild:
         description: Whether or not to run the build script from the project's package.json file.
         required: false
@@ -37,6 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        if: inputs.runDefaultBuild == true
         with:
           submodules: recursive
           token: ${{ secrets.GIT_TOKEN_BASIC || github.token }}
