Evaluate all files in validation workflow (fix)
This workflow was intended to run all files through pre-commit.
The input argument was not defined.
The input argument is now added as `additionalPreCommitArgs`
with a default value of `--all-files`.

https://pre-commit.com/\#pre-commit-run
'run all the hooks against all the files. This is a useful invocation if you are using pre-commit in CI.'

--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -17,6 +17,11 @@ on:
         required: false
         type: string
         default: ''
+      additionalPreCommitArgs:
+        description: options to pass to pre-commit run
+        required: false
+        type: string
+        default: '--all-files'
     secrets:
       GIT_TOKEN_BASIC:
         required: false
@@ -62,7 +67,7 @@ jobs:
           key: pre-commit|${{ hashFiles('.pre-commit-config.yaml') }}|${{ env.pythonLocation }}
 
       - name: Run pre-commit validation
-        run: pre-commit run --show-diff-on-failure --color=always ${{ inputs.args }}
+        run: pre-commit run --show-diff-on-failure --color=always ${{ inputs.additionalPreCommitArgs }}
         shell: bash
 
   # -------------------------------------------------------------------------------------------------------------------
