--- a/.github/workflows/deploy-to-s3.yaml
+++ b/.github/workflows/deploy-to-s3.yaml
@@ -36,6 +36,11 @@ on:
         required: false
         type: boolean
         default: false
+      environment:
+        description: The name of the environment being targeted.
+        required: false
+        type: string
+        default: null
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
@@ -46,6 +51,7 @@ on:
 jobs:
   deploy-to-s3:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     steps:
       - uses: actions/checkout@v3
         with:
