--- a/.github/workflows/update-ecs.yaml
+++ b/.github/workflows/update-ecs.yaml
@@ -44,7 +44,7 @@ on:
         description: AWS secret access key.
         required: true
       GIT_TOKEN_BASIC:
-        required: true
+        required: false
 
 jobs:
   update-ecs:
