Update packages and package info (patch)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @cncsc/conventions-reviewers @cncsc/devops-reviewers @cncsc/security-reviewers
+* @fcgroup/conventions-reviewers @fcgroup/devops-reviewers @fcgroup/security-reviewers
