--- a/.github/workflows/terragrunt-apply.yaml
+++ b/.github/workflows/terragrunt-apply.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: cncsc/actions
+          repository: fcgroup/actions
           path: ./.actions/
 
       - id: verify_files_changed
