--- a/.github/workflows/deploy-to-confluence.yaml
+++ b/.github/workflows/deploy-to-confluence.yaml
@@ -50,7 +50,7 @@ jobs:
         shell: bash
       - uses: actions/checkout@v4
         with:
-          repository: cncsc/actions
+          repository: fcgroup/actions
           path: ./.actions/
       - name: Install Mark
         run: |
