--- a/scripts/deployment/deploy-files-to-s3/package.json
+++ b/scripts/deployment/deploy-files-to-s3/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "@armor/deploy-files-to-s3",
+  "name": "@fcgroup/deploy-files-to-s3",
   "version": "0.0.0-development",
   "description": "Deploys files to an S3 bucket.",
   "main": "deploy-files-to-s3.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:cncsc/actions.git",
+    "url": "git@github.com:fcgroup/actions.git",
     "directory": "scripts/deployment/deploy-files-to-s3"
   },
   "author": {
-    "name": "Cloud-Native Cybersecurity Collective",
-    "email": "info@cncsc.io",
-    "url": "https://www.cncsc.io/"
+    "name": "Bedrock Project",
+    "email": "info@bdrk.dev",
+    "url": "https://bdrk.dev/"
   },
-  "contributors": [
-    {
-      "name": "Armor Defense Inc.",
-      "email": "info@armor.com",
-      "url": "https://www.armor.com/"
-    }
-  ],
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.388.0",
